Add content in main page instead of lorem ipsum
Co-authored-by: VatsalyaGautam <vatsalya@ssipmt.com>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
 
-
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsive-style.css" />
   </head>
@@ -131,11 +130,12 @@
               <span>Our Story</span>
               <h2>We Provide Locally Crafted Food Service</h2>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
-                et purus a odio finibus bibendum in sit amet leo. Mauris feugiat
-                erat tellus. Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Etiam etpurus a odio finibus bibendum in sit amet leo.
-                Mauris feugiat erat tellus.
+                Our Story We Provide Locally Crafted Food Service Lorem ipsum
+                dolor sit amet, consectetur adipiscing elit. Etiam et purus a
+                odio finibus bibendum in sit amet leo. Mauris feugiat erat
+                tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Etiam etpurus a odio finibus bibendum in sit amet leo. Mauris
+                feugiat erat tellus.
               </p>
             </div>
           </div>
